--- a/atividade5/src/main/webapp/WEB-INF/web.xml
+++ b/atividade5/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="5.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd">
     <context-param>
         <param-name>assignmentNumber</param-name>
-        <param-value>0</param-value>
+        <param-value>5</param-value>
     </context-param>
     <servlet>
         <servlet-name>Menu</servlet-name>
@@ -40,7 +40,7 @@
         <location>/erroJava.jsp</location>
     </error-page>
     <error-page>
-        <exception-type>404</exception-type>
+        <error-code>404</error-code>
         <location>/erroHtml.jsp</location>
     </error-page>
 </web-app>
