--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
+/atividade1/target/
+/atividade2/target/
+/atividade3/target/
+/atividade4/target/
 /atividade5/target/
-/com.ufjf.dcc192_atividade5_war_1.0-SNAPSHOT/target/
+/atividade6/target/
+/atividade7/target/
