adiciona contagem de usuários no caso de login e logout

--- a/atividade7/src/main/webapp/WEB-INF/web.xml
+++ b/atividade7/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         <param-value>7</param-value>
     </context-param>
     <context-param>
-        <param-name>loggedUsers</param-name>
+        <param-name>userCount</param-name>
         <param-value>0</param-value>
     </context-param>
     <context-param>
